--- a/Lab3/covid.html
+++ b/Lab3/covid.html
@@ -11,9 +11,9 @@
 
     </head>
 
-    <body style="background-color:powderblue;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Las ganas de comer tuvieron como consecuencia una pandemia a nivel mundial, el COVID-19 aparecio como resultado de tu cena. Al no tener medicamento te enfermaste 
             de gravedad y moriste en la cueva. GAME OVER.
         </p>
@@ -21,7 +21,7 @@
         <a href='home.html'>Volver al inicio</a><br><br>
 
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="100" max="100"> 0% </progress><br>
+        <progress id="file" value="100" max="100"> 0% </progress><br>
 
     </body>
 </html>
